examples/shop/currency/app-repo/k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: currency
  labels:
    istio.io/rev: asm-managed
