examples/shop/currency/app-repo/k8s/base/se.yaml
apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: currency
spec:
  hosts:
  - currency.currency.svc.cluster.local
  ports:
  - name: currency
    number: 7000
    protocol: GRPC
  resolution: DNS
