examples/shop/currency/app-repo/k8s/base/vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
    name: currency-virtualservice
    namespace: currency
spec:
    hosts:
    - currency.currency.svc.cluster.local
    gateways:
    - asm-ingress-gw/asm-ingressgateway
    http:
    - route:
      - destination:
          host: currency
          port:
            number: 80
